public class Graphical extends Component{
    public Graphical(int id, int natureSize, int stretchAbility, int shrinkAbility, String content){
        super(id, natureSize, stretchAbility, shrinkAbility, content);
    }
}
